--- a/style.css
+++ b/style.css
@@ -100,18 +100,58 @@ body {
 .box-text {
   color: #616a76;
 }
+
 .quote-container {
   background-color: #e5e7eb;
-  padding: 100px 450px;
+  padding: 10px 700px;
+  max-width: 800px;
+  display: flex;
 }
 .quote-container .quote {
-  font-size: 36px;
+  font-size: 30px;
   font-style: italic;
   font-weight: 100;
   text-align: left;
+  border: 1px solid black;
+  border-bottom: 1px;
 }
+
 .quote-container .author {
   text-align: right;
   font-weight: bold;
   font-size: 28px;
+}
+.action-container {
+  padding: 100px 300px;
+  display: flex;
+}
+.action-box {
+  background: #3b82f6;
+  border-radius: 10px;
+  padding: 50px 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-items: flex-start;
+}
+
+.action-header {
+  color: #f9faf8;
+  font-size: 30px;
+}
+.action-text {
+  color: #e5e7eb;
+  font-size: 24px;
+}
+.action-button {
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 4px;
+  border-color: white;
+  border-width: 2px;
+  border-style: solid;
+  cursor: pointer;
+  color: white;
+  background: none;
+  padding: 10px 36px;
 }
