--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
 .main-container {
   display: flex;
   justify-content: space-evenly;
+  padding: 0px 450px 100px 450px;
   background: #1f2937;
 }
 .hero-left {
@@ -58,6 +59,8 @@ body {
   background-color: grey;
   text-align: center;
   flex: 1;
+  width: 400px;
+  height: 400px;
 }
 
 .information {
@@ -103,16 +106,17 @@ body {
 
 .quote-container {
   background-color: #e5e7eb;
-  padding: 10px 700px;
-  max-width: 800px;
+  padding: 20px 70px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .quote-container .quote {
   font-size: 30px;
   font-style: italic;
   font-weight: 100;
   text-align: left;
-  border: 1px solid black;
   border-bottom: 1px;
 }
 
@@ -122,26 +126,28 @@ body {
   font-size: 28px;
 }
 .action-container {
-  padding: 100px 300px;
+  padding: 40px 40px;
   display: flex;
 }
 .action-box {
   background: #3b82f6;
   border-radius: 10px;
-  padding: 50px 300px;
-  display: flex;
+  padding-right: 40px;
   justify-content: space-between;
   align-items: center;
-  align-items: flex-start;
+  flex: 1;
+  display: flex;
 }
 
 .action-header {
   color: #f9faf8;
   font-size: 30px;
+  padding: 10px;
 }
 .action-text {
   color: #e5e7eb;
   font-size: 24px;
+  padding: 5px;
 }
 .action-button {
   font-size: 18px;
@@ -149,9 +155,21 @@ body {
   border-radius: 4px;
   border-color: white;
   border-width: 2px;
-  border-style: solid;
+  border-style: solid white;
   cursor: pointer;
   color: white;
   background: none;
   padding: 10px 36px;
+}
+
+.footer {
+  text-align: center;
+  background: #1f2937;
+  color: white;
+  padding: 20px 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
 }
